--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,8 @@
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oxygen:wght@300;400;700&display=swap"
     rel="stylesheet">
-
-
-  <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+  <title>P Jachimowski</title>
 </head>
 
 <body>
